# sandbox

./: .gitignore  README.md
ghostscript-api/: CMakeLists.txt  main.cpp
poppler/: .gitignore  CMakeLists.txt  main.cpp
poppler/poppler/: Makefile  config.h  config.status  configure  libtool  poppler-cairo-uninstalled.pc  poppler-cairo.pc  poppler-cpp-uninstalled.pc  poppler-cpp.pc  poppler-glib-uninstalled.pc  poppler-glib.pc  poppler-qt4-uninstalled.pc  poppler-qt4.pc  poppler-qt5-uninstalled.pc  poppler-qt5.pc  poppler-splash-uninstalled.pc  poppler-splash.pc  poppler-uninstalled.pc  poppler.pc
poppler/poppler/cpp/: Makefile  libpoppler-cpp.la  poppler-version.h
poppler/poppler/cpp/.deps/: libpoppler_cpp_la-poppler-document.Plo  libpoppler_cpp_la-poppler-embedded-file.Plo  libpoppler_cpp_la-poppler-font.Plo  libpoppler_cpp_la-poppler-global.Plo  libpoppler_cpp_la-poppler-image.Plo  libpoppler_cpp_la-poppler-page-renderer.Plo  libpoppler_cpp_la-poppler-page-transition.Plo  libpoppler_cpp_la-poppler-page.Plo  libpoppler_cpp_la-poppler-private.Plo  libpoppler_cpp_la-poppler-rectangle.Plo  libpoppler_cpp_la-poppler-toc.Plo  libpoppler_cpp_la-poppler-version.Plo
poppler/poppler/cpp/.libs/: libpoppler-cpp.lai  libpoppler-cpp.so.0.3.0
poppler/poppler/cpp/tests/: Makefile  poppler-dump  poppler-render
poppler/poppler/fofi/: Makefile
poppler/poppler/fofi/.deps/: libfofi_la-FoFiBase.Plo  libfofi_la-FoFiEncodings.Plo  libfofi_la-FoFiIdentifier.Plo  libfofi_la-FoFiTrueType.Plo  libfofi_la-FoFiType1.Plo  libfofi_la-FoFiType1C.Plo
poppler/poppler/glib/: Makefile  poppler-features.h
poppler/poppler/glib/demo/: Makefile
poppler/poppler/glib/reference/: Makefile
poppler/poppler/goo/: Makefile
poppler/poppler/goo/.deps/: libgoo_la-GooHash.Plo  libgoo_la-GooList.Plo  libgoo_la-GooString.Plo  libgoo_la-GooTimer.Plo  libgoo_la-ImgWriter.Plo  libgoo_la-JpegWriter.Plo  libgoo_la-NetPBMWriter.Plo  libgoo_la-PNGWriter.Plo  libgoo_la-TiffWriter.Plo  libgoo_la-gfile.Plo  libgoo_la-glibc.Plo  libgoo_la-gmem.Plo  libgoo_la-gmempp.Plo  libgoo_la-grandom.Plo  libgoo_la-gstrtod.Plo
poppler/poppler/poppler/: Makefile  Makefile.in  libpoppler.la  libpoppler_la-JPEG2000Stream.lo  poppler-config.h
poppler/poppler/poppler/.deps/: libpoppler_la-Annot.Plo  libpoppler_la-Array.Plo  libpoppler_la-BuiltinFont.Plo  libpoppler_la-BuiltinFontTables.Plo  libpoppler_la-CMap.Plo  libpoppler_la-CachedFile.Plo  libpoppler_la-Catalog.Plo  libpoppler_la-CharCodeToUnicode.Plo  libpoppler_la-DCTStream.Plo  libpoppler_la-DateInfo.Plo  libpoppler_la-Decrypt.Plo  libpoppler_la-Dict.Plo  libpoppler_la-Error.Plo  libpoppler_la-FileSpec.Plo  libpoppler_la-FlateEncoder.Plo  libpoppler_la-FontEncodingTables.Plo  libpoppler_la-FontInfo.Plo  libpoppler_la-Form.Plo  libpoppler_la-Function.Plo  libpoppler_la-Gfx.Plo  libpoppler_la-GfxFont.Plo  libpoppler_la-GfxState.Plo  libpoppler_la-GlobalParams.Plo  libpoppler_la-Hints.Plo  (+41 more)
poppler/poppler/qt4/: Makefile
poppler/poppler/qt5/: Makefile
poppler/poppler/splash/: Makefile
poppler/poppler/test/: Makefile  pdf-fullrewrite  perf-test
poppler/poppler/utils/: Makefile  pdfdetach  pdffonts  pdfimages  pdfinfo  pdfseparate  pdftohtml  pdftoppm  pdftops  pdftotext  pdfunite
tesseract-api/: .gitignore  CMakeLists.txt  main.cpp
tesseract-api/cmake/modules/: FindLeptonica.cmake  FindTesseract.cmake
tesseract-api/src/: octachore.cpp  octachore.hpp
tesseract-api/test/: lorem-ipsum-mini.tif  main-test.cpp  octachore-test.cpp
(+85 files in other folders)
